# otdr-fault-classifier

./: README.md  pyproject.toml
src/otdr_fault_classifier/: __init__.py  cli.py  features.py  model.py  traces.py
tests/: test_pipeline.py
